--- a/docs/30.java基础/10.小工具/10.智能日期识别工具类.md
+++ b/docs/30.java基础/10.小工具/10.智能日期识别工具类.md
@@ -21,7 +21,7 @@ permalink: /pages/8013e6/
 
 ::: tip 参考
 
-此处用到了另一个时间转换工具类，见 [DateConvertor](30.DateConvertor)
+此处用到了另一个时间转换工具类，见 [DateConvertor](30.时间转换工具类)
 
 :::
 
