--- a/docs/30.java基础/10.小工具/20.批处理工具类.md
+++ b/docs/30.java基础/10.小工具/20.批处理工具类.md
@@ -1,8 +1,9 @@
 ---
-title: BatchUtils
+title: BatchUtils 批处理工具类
 date: 2022-06-02 18:53:20
 permalink: /pages/f78cdf/
 ---
+
 # BatchUtils 批处理工具类
 
 ## 开发中的痛点
@@ -11,27 +12,27 @@ permalink: /pages/f78cdf/
 
 ```java
 @Test
-public void withoutBatchUtils() {
-  // 定义一次插入数据的数量，临时集合
-  List<Object> list = new ArrayList<>(10);
-  long count = 0;
-  for (int i = 0; i < 99; i++) {
-    // 添加需要插入的数据
-    list.add(new Object());
-    count++;
-    if (list.size() == 10) {
-      // 插入数据操作
-      System.out.println("插入数据" + list);
-      // 清空临时集合
-      list.clear();
-    }
-  }
-  // 处理剩余的数据
-  if (!list.isEmpty()) {
-    System.out.println("插入数据" + list);
-  }
-  System.out.println("共处理" + count);
-}
+public void withoutBatchUtils(){
+        // 定义一次插入数据的数量，临时集合
+        List<Object> list=new ArrayList<>(10);
+        long count=0;
+        for(int i=0;i< 99;i++){
+        // 添加需要插入的数据
+        list.add(new Object());
+        count++;
+        if(list.size()==10){
+        // 插入数据操作
+        System.out.println("插入数据"+list);
+        // 清空临时集合
+        list.clear();
+        }
+        }
+        // 处理剩余的数据
+        if(!list.isEmpty()){
+        System.out.println("插入数据"+list);
+        }
+        System.out.println("共处理"+count);
+        }
 ```
 
 上面这段其实是有一段通用模板的：
@@ -48,7 +49,7 @@ public void withoutBatchUtils() {
 直接上代码：
 
 ::: tip 参考
-OptionalCollection 是模仿 Optional 定义的集合类的 Optional，参考 [OptionalCollection](40.OptionalCollection)。
+OptionalCollection 是模仿 Optional 定义的集合类的 Optional，参考 [OptionalCollection](40.集合类的 Optional)。
 :::
 
 ```java
@@ -110,18 +111,18 @@ public class BatchUtils {
 
 ```java
 @Test
-public void execute() {
-  // 定义每次处理10条，
-  long count = BatchUtils.execute(10, generator -> {
-    for (int i = 0; i < 99; i++) {
-      // 添加需要插入的数据
-      generator.add(new Object());
-    }
-  },
-  // 定义批处理操作
-  optionalCollection -> optionalCollection.isNotEmpty(System.out::println));
-  System.out.println("共处理" + count);
-}
+public void execute(){
+        // 定义每次处理10条，
+        long count=BatchUtils.execute(10,generator->{
+        for(int i=0;i< 99;i++){
+        // 添加需要插入的数据
+        generator.add(new Object());
+        }
+        },
+        // 定义批处理操作
+        optionalCollection->optionalCollection.isNotEmpty(System.out::println));
+        System.out.println("共处理"+count);
+        }
 ```
 
 # 升级的批处理方法
@@ -129,6 +130,7 @@ public void execute() {
 有时候要根据生成的数据做不同的批处理方法，可以参考下面这个方法
 
 ```java
+
 @Slf4j
 public class BatchUtils {
 
@@ -206,32 +208,33 @@ public class BatchUtils {
 
 ```java
 @Test
-public void execute2() {
-  long l = BatchUtils.execute(3, generator -> {
-    for (int i = 0; i < 100; i++) {
-      if (i % 3 == 0) {
+public void execute2(){
+        long l=BatchUtils.execute(3,generator->{
+        for(int i=0;i< 100;i++){
+        if(i%3==0){
         generator.add(new Object());
-      } else if (i % 3 == 1) {
+        }else if(i%3==1){
         generator.add(i);
-      } else {
+        }else{
         generator.add(i);
-      }
-    }
-  }, BatchUtils.Factory
+        }
+        }
+        },BatchUtils.Factory
         .builder()
-        .add(clazz -> clazz.equals(Object.class), optionalCollection -> optionalCollection.isNotEmpty(System.out::println))
-        .add(clazz -> clazz.equals(String.class), optionalCollection -> optionalCollection.isNotEmpty(System.out::println))
-        .add(clazz -> clazz.equals(Integer.class), optionalCollection -> optionalCollection.isNotEmpty(System.out::println))
-        .add(clazz -> true, optionalCollection -> optionalCollection.isNotEmpty(item -> System.out.println("全量打印" + item)))
+        .add(clazz->clazz.equals(Object.class),optionalCollection->optionalCollection.isNotEmpty(System.out::println))
+        .add(clazz->clazz.equals(String.class),optionalCollection->optionalCollection.isNotEmpty(System.out::println))
+        .add(clazz->clazz.equals(Integer.class),optionalCollection->optionalCollection.isNotEmpty(System.out::println))
+        .add(clazz->true,optionalCollection->optionalCollection.isNotEmpty(item->System.out.println("全量打印"+item)))
         .build());
-  System.out.println(l);
-}
+        System.out.println(l);
+        }
 ```
 
 同样的方法生成数据，通过不同的 Predicate 区分不同的处理方式。
 
 # 尾声
 
-完整代码可参考 [BatchUtils](https://github.com/qiqiangvae/forest/blob/main/forest-common/src/main/java/org/nature/forest/common/utils/BatchUtils.java) 。
+完整代码可参考 [BatchUtils](https://github.com/qiqiangvae/forest/blob/main/forest-common/src/main/java/org/nature/forest/common/utils/BatchUtils.java)
+。
 
 更多好用的 Java 封装和工具类可以看看我的开源项目 [forest](https://github.com/qiqiangvae/forest)。
