--- a/docs/50.linux/10.Linux简单有趣的命令.md
+++ b/docs/50.linux/10.Linux简单有趣的命令.md
@@ -3,6 +3,7 @@ title: Linux 简单有趣的命令
 date: 2022-06-08 23:11:38
 permalink: /pages/db53d7/
 ---
+
 # Linux 简单有趣的命令
 
 本文不定期更新。
@@ -58,7 +59,8 @@ $ sshpass -p {password} ssh -p 22 {username}@{ip}
 
 ssh 还可以实现跳板机隧道功能。
 
-如本机 **Local** 想要访问 **Server** 的 **Port** 端口，但是 **Server** 是在内网，无法访问，但是跳板机 **Jump** 可以访问 **Server**，而 **Local** 可以访问跳板机，此时可以使用ssh实现隧道功能。
+如本机 **Local** 想要访问 **Server** 的 **Port** 端口，但是 **Server** 是在内网，无法访问，但是跳板机 **Jump** 可以访问 **Server**，而 **Local**
+可以访问跳板机，此时可以使用ssh实现隧道功能。
 
 ```bash
 # 要输入 jump 跳板机密码
@@ -81,29 +83,29 @@ curl 命令可以用来发送 web 请求。
 
 ```bash
 # 发送 get 请求
-$ curl http://www.baidu.com
+$ curl https://www.baidu.com
 # 头信息
-$ curl -H 'Authorization:mytoken' http://www.baidu.com
+$ curl -H 'Authorization:mytoken' https://www.baidu.com
 # 发送 cookie
-$ curl -b 'name=jonkee;sex=1' http://www.baidu.com
+$ curl -b 'name=jonkee;sex=1' https://www.baidu.com
 # 存储响应 cookie
-$ curl -c resp_cookie.txt http://www.baidu.com
+$ curl -c resp_cookie.txt https://www.baidu.com
 # 发送 POST 请求
-$ curl -X POST -d '{"username":"jonkee","password":"mypass"}' http://xxx.com/login
+$ curl -X POST -d '{"username":"user","password":"pass"}' https://xxx.com/login
 # 保存响应信息
-$ curl -o resp.txt http://www.baidu.com
+$ curl -o resp.txt https://www.baidu.com
 ```
 
-| 使用           | 符号  | 说明         |
-| ------------ | --- | ---------- |
-| 代理头          | -A  | User-Agent |
-| 请求头          | -H  | Header     |
-| 发送 cookie    | -b  |            |
-| 存储响应 cookie  | -c  |            |
-| 发送 body      | -d  |            |
-| 指定 Http 请求方式 | -X  |            |
-| 打印响应头        | -i  |            |
-| 保存响应信息       | -o  |            |
+| 使用           | 符号   | 说明           |
+|--------------|------|--------------|
+| 代理头          | -A   | User-Agent   |
+| 请求头          | -H   | Header       |
+| 发送 cookie    | -b   |              |
+| 存储响应 cookie  | -c   |              |
+| 发送 body      | -d   |              |
+| 指定 Http 请求方式 | -X   |              |
+| 打印响应头        | -i   |              |
+| 保存响应信息       | -o   |              |
 
 ### scp 服务器间复制文件
 
@@ -147,7 +149,7 @@ $ ls
 1.txt 2.txt 3.txt
 ```
 
-使用 xargs 批量删除redis key。以下命令的意思是，先找出所有的 key，然后通过 xargs 命令将结果用空格分开，然后删除。    
+使用 xargs 批量删除redis key。以下命令的意思是，先找出所有的 key，然后通过 xargs 命令将结果用空格分开，然后删除。
 
 ```bash
 $ redis-cli -a password -h localhost -p 6379 keys "*" | xargs redis-cli -a password -h localhost -p 6379 del
@@ -161,10 +163,10 @@ $ echo -e "韩信\t李白\t百里守约" | xargs -d "\t" echo
 韩信 李白 百里守约
 ```
 
-| 参数  | 解释                       |
-| --- | ------------------------ |
-| -p  | 打印需要执行的命令，询问是否执行，输入y或Y确认 |
-| -t  | 打印需要执行的命令，不需要用户确认        |
+| 参数    | 解释                         |
+|-------|----------------------------|
+| -p    | 打印需要执行的命令，询问是否执行，输入y或Y确认   |
+| -t    | 打印需要执行的命令，不需要用户确认          |
 
 ### awk
 
@@ -187,18 +189,41 @@ $ awk -F '=' '{if ($2 == 2) print $1,$2}' txt
 k2 2
 # 按=分割并去重
 $ awk -F '=' '{print $3}' filename |awk '!a[$0]++'
+# 多个分隔符，并按字段分组找出所有个数大于 1 的
+$ awk -F '[|][$][|]' '{count[$10]++;} END {for(i in count) { if (count[i]>1){print i,count[i]}}}' filename
+
 ```
 
 NF 代表当前行有多少个字段，即 NF-1代表倒数第二个字段。
 
 NR 代表当前行数。
 
-### sed
+### grep 过滤
+
+查找显示行号
+
+```shell
+grep -n 'search_txt' filename
+```
+
+### sed 文本编辑命令
 
 替换字符串
 
 ```bash
 $ sed 's/原字符串/替换字符串/g'
+```
+
+删除行
+::: danger
+注意`-i`是在源文件修改，`-e`是输出到控制台，如果是修改源文件，需要加上备份文件的后缀，如果不想备份，输入空字符串。
+:::
+
+```shell
+# 删除第 N 行
+sed -i '.bak' 'Nd' filename
+# 删除第 N-M 行
+sed -i '.bak' 'N,Md' filename
 ```
 
 截取行数
@@ -256,7 +281,7 @@ no hang up 不挂断。
 $ nohup command > myout.log 2>&1 &  
 ```
 
-- 0 标准输入 
+- 0 标准输入
 
 - 1 标准输出
 
