--- a/docs/50.linux/10.Linux简单有趣的命令.md
+++ b/docs/50.linux/10.Linux简单有趣的命令.md
@@ -254,6 +254,33 @@ $ wc -l filename
 
 + -n 显示行数。
 
+### Vim 快捷键
+
+| 按键            | 功能                               |
+|---------------|----------------------------------|
+| h 或者 ←        | 向左移动                             |
+| j 或者 ↓        | 向下移动                             |
+| k 或者 ↑        | 向上移动                             |
+| l 或者 → 或者空格   | 向右移动                             |
+| [n]+空格        | 向右移动 n 格                         |
+| [n]+方向        | 向某个方向移动n次                        |
+| ctrl+f        | 向下翻页                             |
+| ctrl+b        | 向上翻页                             |
+| 0 或者 home     | 移动到该行的第一个字符处                     |
+| $ 或者 end      | 移动到该行的最后一个字符处                    |
+| G             | 移动到最后一行                          |
+| H             | 移动到第一行                           |
+| [n]G          | 跳转到第 n 行                         |
+| /key          | 向下搜索关键字                          |
+| ?key          | 向上搜索关键字                          |
+| n 或者 N        | 根据/key或者?key的方向重复查找某个关键字。n和N方向相反 |
+| x 或者 X        | x 向后删除，X 向前删除                    |
+| [n]x          | 连续删除                             |
+| dd            | 删除当前光标所在行                        |
+| [n]yy         | 复制一（多）行                          |
+| p             | 粘贴                               |
+| :w [filename] | 另存为                              |
+
 ## 压缩命令
 
 ### tar
