--- a/docs/50.linux/10.Linux简单有趣的命令.md
+++ b/docs/50.linux/10.Linux简单有趣的命令.md
@@ -203,7 +203,7 @@ NR 代表当前行数。
 查找显示行号
 
 ```shell
-grep -n 'search_txt' filename
+$ grep -n 'search_txt' filename
 ```
 
 ### sed 文本编辑命令
@@ -221,15 +221,19 @@ $ sed 's/原字符串/替换字符串/g'
 
 ```shell
 # 删除第 N 行
-sed -i '.bak' 'Nd' filename
+$ sed -i '.bak' 'Nd' filename
 # 删除第 N-M 行
-sed -i '.bak' 'N,Md' filename
+$ sed -i '.bak' 'N,Md' filename
 ```
 
 截取行数
 
 ```bash
 $ sed -n '1,10p' filename
+# 截取到另一个文件
+$ sed -n '1,10p' filename > new_filename
+# 截取到末尾
+$ sed -n '10,$p' filename > new_filename
 ```
 
 ### wc 文本统计
@@ -239,7 +243,7 @@ $ sed -n '1,10p' filename
 - -w 或 --words 只显示字数。
 
 ```bash
-$ wc -l filename
+wc -l filename
 ```
 
 ### grep 匹配
@@ -280,6 +284,8 @@ $ wc -l filename
 | [n]yy         | 复制一（多）行                          |
 | p             | 粘贴                               |
 | :w [filename] | 另存为                              |
+
+
 
 ## 压缩命令
 
