新增部分文档

--- a/docs/20.云原生/20.k8s/10.k8s-常用命令.md
+++ b/docs/20.云原生/20.k8s/10.k8s-常用命令.md
@@ -1,31 +1,54 @@
 ---
 title: k8s 常用命令
 date: 2021-12-13 10:08:33
-tags: k8s
-categories: 云原生
-summary: 记录自己操作 K8s 时使用到的一些命令。命令不多，用到一个记录一个，方便以后忘记了可以很方便地找到。
 permalink: /pages/81e7b1/
 ---
-
 # k8s 常用命令
 
-1. 查看 k8s 帮助命令。`kubectl -h`
+记录自己操作 K8s 时使用到的一些命令。命令不多，用到一个记录一个，方便以后忘记了可以很方便地找到。
 
 ## namespace
 
-1. 查看命名空间。`kubectl get ns` 
-2. 获取 dev namespace 下所有的资源。 `kubectl get all -o wide -n <namespace>`
+1. 查看命名空间。
+```shell
+kubectl get ns
+```
+2. 获取 dev namespace 下所有的资源。 
+```shell
+kubectl get all -o wide -n <namespace>
+```
 
-## pod 命令
+## pod
 
-1. 获取 dev namespack 下所有的pod。`kubeclt get pod -o wide -n <namespace>`
-
-2. 删除 pod，删处理会自动重新创建，重启应用的时候会用到。`kubectl delete pod <podname> -n <namespace>`
-
-3. 查看 pod 的 yaml 文件。`kubectl describe pod <podname> -n <namespace>`
+1. 获取 dev namespack 下所有的pod。
+```shell
+kubeclt get pod -o wide -n <namespace>
+```
+2. 删除 pod，删除后会自动重新创建另一个 pod，重启应用的时候会用到。
+```shell
+kubectl delete pod <podname> -n <namespace>
+```
+3. 查看 pod 的 yaml 文件信息。
+```shell
+kubectl describe pod <podname> -n <namespace>
+```
+4. 进入 pod 里的某个容器内部。不指定容器名则进入默认容器内部。
+```shell
+kubectl exec -it <podname> --container <container-name> -- /bin/bash
+```
 
 ## deployment
 
-1. 水平扩展/收缩。`kubectl scale deployment ${name} --replicas=2`
-
-2. 
+1. 水平扩展/收缩。
+```shell
+# 将 deployment 的副本数量改为 2
+kubectl scale deploy <deployment-name> --replicas=2
+```
+2. 查看 deployment 信息。
+```shell
+kubectl describe deploy <deployment-name>
+```
+3. 删除 deployment。
+```shell
+kubectl delete deploy <deployment-name>
+```
