--- a/docs/20.云原生/20.k8s/30.Macos-minikube.md
+++ b/docs/20.云原生/20.k8s/30.Macos-minikube.md
@@ -30,7 +30,7 @@ $ minikube start
 ```bash
 # 先删除，加参数重新启动
 $ minikube delete
-$ minikube start --image-mirror-country='cn'
+$ minikube start --image-mirror-country='cn' --kubernetes-version=v1.23.3
 ```
 
 结果还是不行，找资料，需要加驱动
@@ -40,7 +40,7 @@ $ minikube start --image-mirror-country='cn'
 $ minikube config set driver docker
 ❗  These changes will take effect upon a minikube delete and then a minikube start
 # 或者指定驱动启动
-$ minikube start --image-mirror-country='cn' --dirver=docker
+$ minikube start --image-mirror-country='cn' --dirver=docker --kubernetes-version=v1.23.3
 ```
 
 这次成功了。
