--- a/docs/60.中间件/10.mysql/10.Mysql-next-key-lock加锁规则.md
+++ b/docs/60.中间件/10.mysql/10.Mysql-next-key-lock加锁规则.md
@@ -52,7 +52,7 @@ permalink: /pages/cb3ed6/
 第一步初始化表结构和数据。
 
 <code-group>
-  <code-block title="建表语句" active>
+   <code-block title="建表语句" active>
 
 ```sql
 CREATE TABLE `t`
@@ -65,8 +65,8 @@ CREATE TABLE `t`
 ) ENGINE = InnoDB;
 ```
 
-  </code-block>
-  <code-block title="插入数据" active>
+   </code-block>
+   <code-block title="造数据" active>
 
 ```sql
 insert into t
@@ -78,7 +78,7 @@ values (0, 0, 0),
        (25, 25, 25);
 ```
 
-  </code-block>
+   </code-block>
 </code-group>
 
 
