--- a/docs/60.中间件/10.mysql/30.开发过程中mysql死锁排查汇总.md
+++ b/docs/60.中间件/10.mysql/30.开发过程中mysql死锁排查汇总.md
@@ -3,6 +3,7 @@ title: 开发过程中mysql死锁排查汇总
 date: 2022-06-11 09:39:48
 permalink: /pages/779a1c/
 ---
+
 # 开发过程中mysql死锁排查汇总
 
 在开发过程中，一旦出现并发问题，那么很可能会产生死锁或者锁等待超时。如果生产环境出现这类问题，那么后果不开设想。
@@ -10,8 +11,47 @@ permalink: /pages/779a1c/
 
 ## 表字段没有加索引导致死锁
 
+操作一张表的时候，如果查询条件里没有加上索引，mysql 会做全表扫描，在并发环境下，如果有更新操作，那么就会产生
 
 ## 大批量数据 in 更新死锁
 
+造数据
+
+<code-group>
+  <code-block title="建表语句" active>
+
+```sql
+CREATE TABLE `t2`
+(
+    `id` int NOT NULL,
+    `c`  int DEFAULT NULL,
+    `d`  int DEFAULT NULL,
+    PRIMARY KEY (`id`),
+    KEY  `c` (`c`)
+) ENGINE=InnoDB;
+```
+
+  </code-block>
+  <code-block title="造数据">
+
+```sql
+drop procedure createData;
+
+create procedure createData()
+begin
+    declare i int default 0;
+    label:
+    while(i < 100000)
+        do
+            insert into t2(id, c, d) values (i, i, i);
+            set i = i + 1;
+        end while label;
+end;
+
+call createData()
+```
+
+  </code-block>
+</code-group>
 
 ## 删除数据时索引字段类型不匹配死锁
