--- a/docs/10.开发基础/20.开发软件和配置分享.md
+++ b/docs/10.开发基础/20.开发软件和配置分享.md
@@ -24,10 +24,21 @@ permalink: /pages/271d86/
 ### Github 访问加速
 
 推荐使用 SwitchHosts 工具动态配置 Github 的 hosts，[软件](./#软件)下载见上。
-选择远程 hosts 类型，输入地址[https://gitlab.com/ineo6/hosts/-/raw/master/next-hosts](https://gitlab.com/ineo6/hosts/-/raw/master/next-hosts) 。
+选择远程 hosts 类型，输入地址 <https://gitlab.com/ineo6/hosts/-/raw/master/next-hosts>。
 
-该项目仓库地址[https://github.com/ineo6/hosts](https://github.com/ineo6/hosts) 或 [https://gitlab.com/ineo6/hosts（推荐，访问速度快）](https://gitlab.com/ineo6/hosts)。
+该项目仓库地址 <https://github.com/ineo6/hosts> 或 <https://gitlab.com/ineo6/hosts>（推荐 gitlab，访问速度快）。
 
 配置如下图：
 
 ![KZgCg2](https://qiqiang.oss-cn-hangzhou.aliyuncs.com/muan/KZgCg2.jpg)
+
+### brew 安装
+
+推荐这个仓库 <https://gitee.com/cunkai/HomebrewCN>。
+
+一键安装并设置国内镜像源
+
+```shell
+/bin/zsh -c "$(curl -fsSL https://gitee.com/cunkai/HomebrewCN/raw/master/Homebrew.sh)"
+```
+
