--- a/docs/10.开发基础/20.开发软件和配置分享.md
+++ b/docs/10.开发基础/20.开发软件和配置分享.md
@@ -42,3 +42,21 @@ permalink: /pages/271d86/
 /bin/zsh -c "$(curl -fsSL https://gitee.com/cunkai/HomebrewCN/raw/master/Homebrew.sh)"
 ```
 
+### zsh 安装配置
+
+安装 **zsh**
+
+```shell
+# ubuntu 安装命令
+apt install zsh
+```
+
+安装 **oh-my-zsh** 
+
+```shell
+# 国内访问更快
+sh -c "$(curl -fsSL https://gitee.com/mirrors/oh-my-zsh/raw/master/tools/install.sh)"
+```
+
+
+
