--- a/docs/20.云原生/20.k8s/30.Macos-minikube.md
+++ b/docs/20.云原生/20.k8s/30.Macos-minikube.md
@@ -40,7 +40,7 @@ $ minikube start --image-mirror-country='cn' --kubernetes-version=v1.23.3
 $ minikube config set driver docker
 ❗  These changes will take effect upon a minikube delete and then a minikube start
 # 或者指定驱动启动
-$ minikube start --image-mirror-country='cn' --dirver=docker --kubernetes-version=v1.23.3
+$ minikube start --image-mirror-country='cn' --dirver=docker --kubernetes-version=v1.23.3 --network="host"
 ```
 
 这次成功了。
