--- a/docs/50.linux/10.Linux简单有趣的命令.md
+++ b/docs/50.linux/10.Linux简单有趣的命令.md
@@ -230,10 +230,10 @@ $ sed -i '.bak' 'N,Md' filename
 
 ```bash
 $ sed -n '1,10p' filename
-# 截取到另一个文件
+# 截取第1行到第10行并输出到另一个文件
 $ sed -n '1,10p' filename > new_filename
-# 截取到末尾
-$ sed -n '10,$p' filename > new_filename
+# 截取第11行到文件末尾并输出到另一个文件中
+$ sed -n '11,$p' filename > new_filename
 ```
 
 ### wc 文本统计
