新增k8s部分文章

--- a/docs/20.云原生/20.k8s/50.Ubuntu使用kubeadm安装k8s集群.md
+++ b/docs/20.云原生/20.k8s/50.Ubuntu使用kubeadm安装k8s集群.md
@@ -206,15 +206,10 @@ kubectl apply -f kube-flannel.yml
 
 ### 安装 worker 节点
 
-执行刚才备份的命令
+执行刚才备份的命令，命令结束之后等待一段时间，worker 节点的 k8s 就安装好了。
 
 ```SHELL
 kubeadm join 192.168.0.89:6443 --token e074xs.2vz38d7g49f592x8 \
         --discovery-token-ca-cert-hash sha256:2f9cd0471982a71c9842efad15bd1da9e8caadf795eaf7dc5e311c10afceb255 
 ```
 
-
-
-```shell
-kubectl taint node master node-role.kubernetes.io/master:NoSchedule-
-```
