--- a/docs/20.云原生/20.k8s/70.k8s持久化存储.md
+++ b/docs/20.云原生/20.k8s/70.k8s持久化存储.md
@@ -181,6 +181,115 @@ myfile.yml
 
 ### k8s 使用 NFS 作为 PV 静态存储
 
+#### Redis NFS PV
+
+```yaml
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: redis-nfs-pv
+spec:
+  capacity:
+    storage: 10Gi
+  volumeMode: Filesystem
+  accessModes:
+    - ReadWriteOnce
+  persistentVolumeReclaimPolicy: Recycle
+  # 指定   storageClass
+  storageClassName: redis-nfs-storage-class
+  nfs:
+    path: /nfs-data/redis-data
+    server: 192.168.0.58
+
+```
+
+#### Redis NFS PVC
+
+```yaml
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: redis-nfs-pvc
+spec:
+  resources:
+    requests:
+      storage: 10Gi
+  volumeMode: Filesystem
+  accessModes:
+    - ReadWriteOnce
+  # 指定   storageClass
+  storageClassName: redis-nfs-storage-class
+
+```
+
+#### Redis NFS Service
+
+```yaml
+apiVersion: v1
+kind: Service
+metadata:
+  name: redis
+spec:
+  selector:
+    app: redis
+  ports:
+  - name: redis-port
+    port: 6379
+    targetPort: 6379
+    protocol: TCP 
+    nodePort: 30379
+  type: NodePort
+```
+
+#### Redis NFS Deplpyment
+
+```yaml
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: redis
+spec:
+  selector:
+    matchLabels:
+      app: redis
+  template:
+    metadata:
+      labels:
+        app: redis
+    spec:
+      containers:
+        - name: redis
+          image: redis:7
+          command:
+            - "redis-server"
+          args:
+            - "/etc/redis/redis.conf"
+            - "--protected-mode"
+            - "no"
+          resources:
+            limits:
+              memory: "128Mi"
+              cpu: "200m"
+          ports:
+            - containerPort: 6379
+          volumeMounts:
+            - mountPath: /redis-data
+              name: redis-data
+            - mountPath: /etc/redis
+              name: redis-conf
+      volumes:
+        - name: redis-data
+          persistentVolumeClaim:
+            claimName: redis-nfs-pvc
+        # redis-server 配置
+        - name: redis-conf
+          configMap:
+            name: redis-cm
+            items:
+              - key: redis.conf
+                path: redis.conf
+```
+
 
 
 ### k8s 使用 NFS 作为 PV 动态存储
