--- a/docs/10.开发基础/20.开发软件和配置分享.md
+++ b/docs/10.开发基础/20.开发软件和配置分享.md
@@ -17,7 +17,8 @@ permalink: /pages/271d86/
 6. 免费终端工具 [tabby](https://github.com/Eugeny/tabby/releases)，是 [termius](https://www.termius.com/) 的开源版。
 7. 轻量级 Api 工具，Postman 替代品 [hoppscotch](https://hoppscotch.io/cn/)。
 8. 免费好用的 Markdown 编辑器 [Mark Text](https://marktext.app/)。
-9. 开源免费的图床工具，支持多种存储方式。[uPic](https://github.com/gee1k/uPic/releases)。
+9. 开源免费的图床工具，支持多种存储方式，下载地址 [uPic](https://github.com/gee1k/uPic/releases)。
+10. 开源免费的 kubernetes IDE 开发工具和可视化 Dashboard [Lens](https://github.com/lensapp/lens)。
 
 ## 配置
 
