--- a/docs/20.云原生/20.k8s/60.探索k8s过程中的问题和解决方案.md
+++ b/docs/20.云原生/20.k8s/60.探索k8s过程中的问题和解决方案.md
@@ -38,3 +38,12 @@ containers:
     - mountPath: /data
       name: data
 ```
+
+## Master 节点无法部署 Pod
+
+修改主节点的容忍度
+
+```shell
+kubectl taint node master node-role.kubernetes.io/master:NoSchedule-
+```
+
