--- a/docs/10.开发基础/20.开发软件和配置分享.md
+++ b/docs/10.开发基础/20.开发软件和配置分享.md
@@ -9,16 +9,17 @@ permalink: /pages/271d86/
 
 ## 软件
 
-1. hosts切换工具 [SwitchHosts](https://www.electronjs.org/apps/switchhosts)，强烈推荐.
-2. 好看好用的 Redis GUI工具 [AnotherRedisDesktopManager](https://gitee.com/qishibo/AnotherRedisDesktopManager)。下载或者 MacOS 命令安装`brew install --cask another-redis-desktop-manager`。
-3. MacOS 取色工具 [ColorSlurp](https://apps.apple.com/cn/app/colorslurp/id1287239339?l=en&mt=12)。
-4. 好用的邮箱工具 [Spark](https://sparkmailapp.com/zh)。
-5. **收费**终端工具 [termius](https://www.termius.com/)。该工具收费，可以网上找破解版。
-6. 免费终端工具 [tabby](https://github.com/Eugeny/tabby/releases)，是 [termius](https://www.termius.com/) 的开源版。
-7. 轻量级 Api 工具，Postman 替代品 [hoppscotch](https://hoppscotch.io/cn/)。
-8. 免费好用的 Markdown 编辑器 [Mark Text](https://marktext.app/)。
-9. 开源免费的图床工具，支持多种存储方式，下载地址 [uPic](https://github.com/gee1k/uPic/releases)。
-10. 开源免费的 kubernetes IDE 开发工具和可视化 Dashboard [Lens](https://github.com/lensapp/lens)。
+1. hosts切换工具 [SwitchHosts](https://www.electronjs.org/apps/switchhosts)，强烈推荐；
+2. 好看好用的 Redis GUI工具 [AnotherRedisDesktopManager](https://gitee.com/qishibo/AnotherRedisDesktopManager)。下载或者 MacOS 命令安装`brew install --cask another-redis-desktop-manager`；
+3. MacOS 取色工具 [ColorSlurp](https://apps.apple.com/cn/app/colorslurp/id1287239339?l=en&mt=12)；
+4. 好用的邮箱工具 [Spark](https://sparkmailapp.com/zh)了；
+5. **收费**终端工具 [termius](https://www.termius.com/)。该工具收费，可以网上找破解版；
+6. 免费终端工具 [tabby](https://github.com/Eugeny/tabby/releases)，是 [termius](https://www.termius.com/) 的开源版；
+7. 轻量级 Api 工具，Postman 替代品 [hoppscotch](https://hoppscotch.io/cn/)；
+8. 免费好用的 Markdown 编辑器 [Mark Text](https://marktext.app/)；
+9. 开源免费的图床工具，支持多种存储方式，下载地址 [uPic](https://github.com/gee1k/uPic/releases)；
+10. 开源免费的 kubernetes IDE 开发工具和可视化 Dashboard [Lens](https://github.com/lensapp/lens)；
+11. Zookeeper GUI 工具，[下载地址](https://github.com/vran-dev/PrettyZoo/releases)；
 
 ## 配置
 
