--- a/docs/dev/50.HTTP相关知识点记录.md
+++ b/docs/dev/50.HTTP相关知识点记录.md
@@ -7,7 +7,7 @@ permalink: /dev/4c4217/
 
 从事开发工作这么多年了，一直没有系统的了解过网络协议和Http协议，正好最近在看罗剑锋老师的《透视HTTP协议》，所以在此做一个总结，记录一些知识点。
 
-::: warning
+::: info 引用说明
 
 本文部分资料引用来自于[极客时间《透视 HTTP 协议》。](https://time.geekbang.org/column/intro/100029001?tab=catalog)
 
