--- a/docs/cloudNative/k8s/70.k8s持久化存储.md
+++ b/docs/cloudNative/k8s/70.k8s持久化存储.md
@@ -136,7 +136,7 @@ mkdir /nfs-data
 3. 修改 NFS 配置，添加如下配置，IP 填自己的 IP。。
 
 ```SHELL
-$ vim /etc/exports 
+$ vim /conf/exports 
 /nfs-data 192.168.0.58/24(rw,sync,no_subtree_check,no_root_squash,insecure)
 ```
 
@@ -263,7 +263,7 @@ spec:
           command:
             - "redis-server"
           args:
-            - "/etc/redis/redis.conf"
+            - "/conf/redis/redis.conf"
             - "--protected-mode"
             - "no"
           resources:
@@ -275,7 +275,7 @@ spec:
           volumeMounts:
             - mountPath: /redis-data
               name: redis-data
-            - mountPath: /etc/redis
+            - mountPath: /conf/redis
               name: redis-conf
       volumes:
         - name: redis-data
