--- a/docs/java/kits/20.批处理工具类.md
+++ b/docs/java/kits/20.批处理工具类.md
@@ -1,7 +1,7 @@
 ---
 title: BatchUtils 批处理工具类
 date: 2022-06-02 18:53:20
-permalink: /pages/f78cdf/
+permalink: /java/kits/f78cdf/
 ---
 
 # BatchUtils 批处理工具类
