--- a/docs/java/kits/40.集合类的 Optional.md
+++ b/docs/java/kits/40.集合类的 Optional.md
@@ -1,7 +1,7 @@
 ---
 title: 集合类的 Optional
 date: 2022-06-03 20:39:07
-permalink: /pages/7fb3c5/
+permalink: /java/kits/7fb3c5/
 ---
 # 集合类的 Optional
 
