--- a/docs/java/toolUsage/10.Arthas线上排查经验.md
+++ b/docs/java/toolUsage/10.Arthas线上排查经验.md
@@ -1,7 +1,7 @@
 ---
 title: Arthas线上排查经验
 date: 2022-06-14 20:45:19
-permalink: /pages/79030a/
+permalink: /java/toolUsage/79030a/
 ---
 
 # Arthas线上排查经验
