--- a/docs/middleware/mysql/20.Mysql安装总结教程.md
+++ b/docs/middleware/mysql/20.Mysql安装总结教程.md
@@ -109,17 +109,17 @@ server-id=123456
 
 ```bash
 $ docker --name mysql.temp --rm mysql5.7
-$ docker cp mysql.temp:/etc/mysql /etc/mysql
+$ docker cp mysql.temp:/conf/mysql /conf/mysql
 ```
 
 1. 修改配置文件。
 
 ```bash
-$ vim /etc/mysql/mysql.conf.d/mysqld.cnf
+$ vim /conf/mysql/mysql.conf.d/mysqld.cnf
 ```
 
 1. 启动一个新的 mysql 服务。
 
 ```bash
-$ docker run --name mysql3306 -d -e MYSQL_ROOT_PASSWORD=mountain -v /var/lib/mysql:/var/lib/mysql -v /etc/mysql:/etc/mysql -p 3306:3306 mysql:5.7
+$ docker run --name mysql3306 -d -e MYSQL_ROOT_PASSWORD=mountain -v /var/lib/mysql:/var/lib/mysql -v /conf/mysql:/conf/mysql -p 3306:3306 mysql:5.7
 ```
