--- a/docs/cloudNative/k8s/50.Ubuntu使用kubeadm安装k8s集群.md
+++ b/docs/cloudNative/k8s/50.Ubuntu使用kubeadm安装k8s集群.md
@@ -22,8 +22,8 @@ sudo gpasswd -a {username} docker
 
 ```shell
 
-sudo mkdir -p /etc/docker
-sudo tee /etc/docker/daemon.json <<-'EOF'
+sudo mkdir -p /conf/docker
+sudo tee /conf/docker/daemon.json <<-'EOF'
 {
   "registry-mirrors": ["https://52msq4gm.mirror.aliyuncs.com"]
 }
@@ -41,7 +41,7 @@ sudo systemctl restart docker
 1.  由于 Kubernetes 使用主机名来区分集群里的节点，所以每个节点的 hostname 必须不能重名,所以需要修改 hostname
 
 ```shell
-sudo vi /etc/hostname
+sudo vi /conf/hostname
 master
 sysctl kernel.hostname=master 
 ```
@@ -49,7 +49,7 @@ sysctl kernel.hostname=master
 2. 学习环境我们需要使用 docker 作为底层支持，需要把 cgroup 的驱动程序改成 systemd。
 
 ```shell
-sudo vim /etc/docker/daemon.json
+sudo vim /conf/docker/daemon.json
 {
   "exec-opts": ["native.cgroupdriver=systemd"],
   "registry-mirrors": ["https://52msq4gm.mirror.aliyuncs.com"]
@@ -59,11 +59,11 @@ sudo vim /etc/docker/daemon.json
 3. 为了让 Kubernetes 能够检查、转发网络流量，你需要修改 iptables 的配置，启用“br_netfilter”模块。
 
 ```SHELL
-cat <<EOF | sudo tee /etc/modules-load.d/k8s.conf
+cat <<EOF | sudo tee /conf/modules-load.d/k8s.conf
 br_netfilter
 EOF
 
-cat <<EOF | sudo tee /etc/sysctl.d/k8s.conf
+cat <<EOF | sudo tee /conf/sysctl.d/k8s.conf
 net.bridge.bridge-nf-call-ip6tables = 1
 net.bridge.bridge-nf-call-iptables = 1
 net.ipv4.ip_forward=1 # better than modify /etc/sysctl.conf
@@ -76,7 +76,7 @@ sudo sysctl --system
 
 ```shell
 sudo swapoff -a
-sudo sed -ri '/\sswap\s/s/^#?/#/' /etc/fstab
+sudo sed -ri '/\sswap\s/s/^#?/#/' /conf/fstab
 ```
 
 ### 安装 kubeadm
@@ -88,7 +88,7 @@ sudo apt install -y apt-transport-https ca-certificates curl
 
 curl https://mirrors.aliyun.com/kubernetes/apt/doc/apt-key.gpg | sudo apt-key add -
 
-cat <<EOF | sudo tee /etc/apt/sources.list.d/kubernetes.list
+cat <<EOF | sudo tee /conf/apt/sources.list.d/kubernetes.list
 deb https://mirrors.aliyun.com/kubernetes/apt/ kubernetes-xenial main
 EOF
 
@@ -150,10 +150,10 @@ sudo kubeadm init \
 
 ```SHELL
  mkdir -p $HOME/.kube
- sudo cp -i /etc/kubernetes/admin.conf $HOME/.kube/config
+ sudo cp -i /conf/kubernetes/admin.conf $HOME/.kube/config
  sudo chown $(id -u):$(id -g) $HOME/.kube/config
  
- export KUBECONFIG=/etc/kubernetes/admin.conf
+ export KUBECONFIG=/conf/kubernetes/admin.conf
 ```
 
 3. 其他节点要加入集群必须要用指令里的 token 和 ca 证书，所以这条命令务必拷贝后保存好。
