--- a/docs/java/kits/30.时间转换工具类.md
+++ b/docs/java/kits/30.时间转换工具类.md
@@ -1,7 +1,7 @@
 ---
 title: 时间转换工具类
 date: 2022-06-02 18:53:20
-permalink: /pages/22fbc0/
+permalink: /java/kits/22fbc0/
 ---
 # DateConvertor 时间转换工具类
 
