--- a/docs/cloudNative/k8s/50.Ubuntu使用kubeadm安装k8s集群.md
+++ b/docs/cloudNative/k8s/50.Ubuntu使用kubeadm安装k8s集群.md
@@ -23,7 +23,7 @@ sudo gpasswd -a {username} docker
 ```shell
 
 sudo mkdir -p /conf/docker
-sudo tee /conf/docker/daemon.json <<-'EOF'
+sudo tee /etc/docker/daemon.json <<-'EOF'
 {
   "registry-mirrors": ["https://52msq4gm.mirror.aliyuncs.com"]
 }
@@ -41,7 +41,7 @@ sudo systemctl restart docker
 1.  由于 Kubernetes 使用主机名来区分集群里的节点，所以每个节点的 hostname 必须不能重名,所以需要修改 hostname
 
 ```shell
-sudo vi /conf/hostname
+sudo vi /etc/hostname
 master
 sysctl kernel.hostname=master 
 ```
@@ -49,7 +49,7 @@ sysctl kernel.hostname=master
 2. 学习环境我们需要使用 docker 作为底层支持，需要把 cgroup 的驱动程序改成 systemd。
 
 ```shell
-sudo vim /conf/docker/daemon.json
+sudo vim /etc/docker/daemon.json
 {
   "exec-opts": ["native.cgroupdriver=systemd"],
   "registry-mirrors": ["https://52msq4gm.mirror.aliyuncs.com"]
@@ -59,11 +59,11 @@ sudo vim /conf/docker/daemon.json
 3. 为了让 Kubernetes 能够检查、转发网络流量，你需要修改 iptables 的配置，启用“br_netfilter”模块。
 
 ```SHELL
-cat <<EOF | sudo tee /conf/modules-load.d/k8s.conf
+cat <<EOF | sudo tee /etc/modules-load.d/k8s.conf
 br_netfilter
 EOF
 
-cat <<EOF | sudo tee /conf/sysctl.d/k8s.conf
+cat <<EOF | sudo tee /etc/sysctl.d/k8s.conf
 net.bridge.bridge-nf-call-ip6tables = 1
 net.bridge.bridge-nf-call-iptables = 1
 net.ipv4.ip_forward=1 # better than modify /etc/sysctl.conf
@@ -76,7 +76,7 @@ sudo sysctl --system
 
 ```shell
 sudo swapoff -a
-sudo sed -ri '/\sswap\s/s/^#?/#/' /conf/fstab
+sudo sed -ri '/\sswap\s/s/^#?/#/' /etc/fstab
 ```
 
 ### 安装 kubeadm
@@ -88,7 +88,7 @@ sudo apt install -y apt-transport-https ca-certificates curl
 
 curl https://mirrors.aliyun.com/kubernetes/apt/doc/apt-key.gpg | sudo apt-key add -
 
-cat <<EOF | sudo tee /conf/apt/sources.list.d/kubernetes.list
+cat <<EOF | sudo tee /etc/apt/sources.list.d/kubernetes.list
 deb https://mirrors.aliyun.com/kubernetes/apt/ kubernetes-xenial main
 EOF
 
@@ -150,10 +150,10 @@ sudo kubeadm init \
 
 ```SHELL
  mkdir -p $HOME/.kube
- sudo cp -i /conf/kubernetes/admin.conf $HOME/.kube/config
+ sudo cp -i /etc/kubernetes/admin.conf $HOME/.kube/config
  sudo chown $(id -u):$(id -g) $HOME/.kube/config
  
- export KUBECONFIG=/conf/kubernetes/admin.conf
+ export KUBECONFIG=/etc/kubernetes/admin.conf
 ```
 
 3. 其他节点要加入集群必须要用指令里的 token 和 ca 证书，所以这条命令务必拷贝后保存好。
@@ -177,7 +177,7 @@ hw-dev   NotReady    control-plane,master   13m   v1.23.3
 
 这里是 flannel 官方配置，改一下就可以了，地址<https://github.com/flannel-io/flannel/blob/master/Documentation/kube-flannel.yml> 。修改文件里的“net-conf.json”字段，把 Network 改成刚才 kubeadm 的参数 --pod-network-cidr 设置的地址段。如
 
-```
+```yaml
 net-conf.json: |
 {
   "Network": "10.10.0.0/16",
@@ -191,9 +191,9 @@ net-conf.json: |
 
 
 :::  details 截止 2022-8-15 完成配置如下：
-
-<<< @/docs/.vuepress/k8s/kube-flannel.yml
-
+```yaml
+@include(../../.vuepress/document/k8s/kube-flannel.yml)
+```
 :::
 
 应用这个配置：
