--- a/docs/dev/30.Git常用操作.md
+++ b/docs/dev/30.Git常用操作.md
@@ -7,6 +7,16 @@ permalink: /dev/d5256d/
 
 git 命令太多总是记不住，没关系，不用记住所有的命令，认真记住这些常用的命令，就可以解决很多问题了。
 
+## 常见错误
+
+#### refusing to merge unrelated histories
+
+```shell
+$ merge origin/master --allow-unrelated-histories
+```
+
+
+
 ## 文件命令
 
 1. 强制从某个分支的代码更新本地代码
