--- a/docs/cloudNative/docker/10.docker基本使用.md
+++ b/docs/cloudNative/docker/10.docker基本使用.md
@@ -101,7 +101,7 @@ $ docker run --name redis5 --rm redis:5
 2. 指定配置文件启动，可以指定密码及其他配置。用 `-v`指定配置文件的挂载（映射），容器名称为 `qqredis`，`redis-server /usr/local/etc/redis/redis.conf`是启动命令。redis.conf 修改 requirepass 和 bind。
 
 ```bash
-$ docker run -v /Users/qiqiang/Desktop/docker-supershop/redis/redis.conf:/usr/local/conf/redis/redis.conf -p 6379:6379 --rm --name redis5pass redis:5  redis-server /usr/local/conf/redis/redis.conf
+$ docker run -v /Users/qiqiang/Desktop/docker-supershop/redis/redis.conf:/usr/local/etc/redis/redis.conf -p 6379:6379 --rm --name redis5pass redis:5  redis-server /usr/local/etc/redis/redis.conf
 ```
 
 ### mysql
@@ -184,7 +184,7 @@ http {
 启动命令,将本地7070端口暴露为文件服务端口。文件存储在 `/Users/qiqiang/Desktop/fileStore` 中
 
 ```bash
-$ docker run --name qqnginx-fileServer --rm -p 7070:7070 -v /Users/qiqiang/Desktop/docker-supershop/nginx/nginx-file.conf:/conf/nginx/nginx.conf -v /Users/qiqiang/Desktop/docker-supershop/nginx/fileStore:/home/fileStore nginx
+$ docker run --name qqnginx-fileServer --rm -p 7070:7070 -v /Users/qiqiang/Desktop/docker-supershop/nginx/nginx-file.conf:/etc/nginx/nginx.conf -v /Users/qiqiang/Desktop/docker-supershop/nginx/fileStore:/home/fileStore nginx
 ```
 
 # 进阶篇
@@ -227,7 +227,7 @@ $ docker build -t dfnginx:v1 .
 2. 启动容器，访问localhost:7070
 
 ```bash
-$ docker run --name dfnxingv1 --rm -p 7070:7070 -v /Users/qiqiang/Desktop/docker-supershop/nginx/nginx-file.conf:/conf/nginx/nginx.conf -v /Users/qiqiang/Desktop/docker-supershop/nginx/fileStore:/home/fileStore dfnginx:v1
+$ docker run --name dfnxingv1 --rm -p 7070:7070 -v /Users/qiqiang/Desktop/docker-supershop/nginx/nginx-file.conf:/etc/nginx/nginx.conf -v /Users/qiqiang/Desktop/docker-supershop/nginx/fileStore:/home/fileStore dfnginx:v1
 ```
 
 ## docker 容器集群编排 compose
