--- a/docs/cloudNative/k8s/50.Ubuntu使用kubeadm安装k8s集群.md
+++ b/docs/cloudNative/k8s/50.Ubuntu使用kubeadm安装k8s集群.md
@@ -22,7 +22,7 @@ sudo gpasswd -a {username} docker
 
 ```shell
 
-sudo mkdir -p /conf/docker
+sudo mkdir -p /etc/docker
 sudo tee /etc/docker/daemon.json <<-'EOF'
 {
   "registry-mirrors": ["https://52msq4gm.mirror.aliyuncs.com"]
