--- a/docs/cloudNative/k8s/70.k8s持久化存储.md
+++ b/docs/cloudNative/k8s/70.k8s持久化存储.md
@@ -136,7 +136,7 @@ mkdir /nfs-data
 3. 修改 NFS 配置，添加如下配置，IP 填自己的 IP。。
 
 ```SHELL
-$ vim /conf/exports 
+$ vim /etc/exports 
 /nfs-data 192.168.0.58/24(rw,sync,no_subtree_check,no_root_squash,insecure)
 ```
 
