新增k8s部署单机mysql文档

--- a/docs/cloudNative/k8s/50.Ubuntu使用kubeadm安装k8s集群.md
+++ b/docs/cloudNative/k8s/50.Ubuntu使用kubeadm安装k8s集群.md
@@ -5,7 +5,6 @@ permalink: /cloudNative/k8s/517b0e/
 ---
 # Ubuntu 使用 kubeadm 安装k8s集群环境
 
-
 ## 安装 Docker
 ```shell
 # 安装
@@ -159,8 +158,8 @@ sudo kubeadm init \
 3. 其他节点要加入集群必须要用指令里的 token 和 ca 证书，所以这条命令务必拷贝后保存好。
 
 ```SHELL
-kubeadm join 192.168.0.89:6443 --token e074xs.2vz38d7g49f592x8 \
-        --discovery-token-ca-cert-hash sha256:2f9cd0471982a71c9842efad15bd1da9e8caadf795eaf7dc5e311c10afceb255 
+kubeadm join 192.168.0.89:6443 --token ki6bfe.9tzzeigubxdni7wj \
+    --discovery-token-ca-cert-hash sha256:26267dcb0eb6033f6d0e613eb266056956bd42901fcd664acd05e1dd6443bbd4
 ```
 
 4. 此时查看节点状态是 NotReady，这是因为还没有安装网络插件的原因。
