--- a/docs/middleware/mysql/20.Mysql安装总结教程.md
+++ b/docs/middleware/mysql/20.Mysql安装总结教程.md
@@ -123,3 +123,6 @@ $ vim /conf/mysql/mysql.conf.d/mysqld.cnf
 ```bash
 $ docker run --name mysql3306 -d -e MYSQL_ROOT_PASSWORD=mountain -v /var/lib/mysql:/var/lib/mysql -v /etc/mysql:/etc/mysql -p 3306:3306 mysql:5.7
 ```
+
+## k8s 安装 mysql
+详细教程见[K8s 部署单机 Mysql](/cloudNative/k8s/104a10/)
