--- a/docs/cloudNative/k8s/50.Ubuntu使用kubeadm安装k8s集群.md
+++ b/docs/cloudNative/k8s/50.Ubuntu使用kubeadm安装k8s集群.md
@@ -178,20 +178,19 @@ hw-dev   NotReady    control-plane,master   13m   v1.23.3
 
 ```yaml
 net-conf.json: |
-{
-  "Network": "10.10.0.0/16",
-  "Backend": {
-    "Type": "vxlan"
-  }
-}
-
+    {
+      "Network": "10.10.0.0/16",
+      "Backend": {
+        "Type": "vxlan"
+      }
+    }
 ```
 
 
 
 :::  details 截止 2022-8-15 完成配置如下：
 ```yaml
-@include(../../.vuepress/document/k8s/kube-flannel.yml)
+@include(@document/k8s/kube-flannel.yml)
 ```
 :::
 
