--- a/docs/cloudNative/k8s/90.K8s部署单机Mysql.md
+++ b/docs/cloudNative/k8s/90.K8s部署单机Mysql.md
@@ -26,9 +26,11 @@ data:
 
 ## 声明 PV 和 PVC
 
-### Host 方式
 新建 PV 和 PVC 配置文件`mysql-pv-pvc.yaml`并应用`kubectl apply -f mysql-pv-pvc.yaml`。
 
+::: code-tabs#yaml
+
+@tab HOST
 ```yaml
 apiVersion: v1
 kind: PersistentVolume
@@ -58,12 +60,46 @@ spec:
     - ReadWriteOnce
   storageClassName: mysql-host-storage-class
 ```
+@tab NFS
 
-### NFS 方式
+```yaml
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: mysql-pv
+spec:
+  capacity:
+    storage: 2Gi
+  volumeMode: Filesystem
+  accessModes:
+    - ReadWriteOnce
+  persistentVolumeReclaimPolicy: Recycle
+  storageClassName: mysql-nfs-storage-class
+  nfs:
+    path: /k8s-data/mysql-data
+    server: 192.168.31.111
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: mysql-pvc
+spec:
+  resources:
+    requests:
+      storage: 2Gi
+  volumeMode: Filesystem
+  accessModes:
+    - ReadWriteOnce
+  storageClassName: mysql-nfs-storage-class
+```
+:::
+
 
 ## 部署 mysql deployment
 
 创建配置文件`mysql-deploy.yml`并应用`kubectl apply -f mysql-deploy.yml`。
+
+以下提供 Host 和 NFS 两种方式的配置（**NSF需要自己搭建服务**）。
 ```yaml
 apiVersion: apps/v1
 kind: Deployment
@@ -98,12 +134,8 @@ spec:
             secretKeyRef:
               name: mysql-secret
               key: password
-        - name: MYSQL_USER
-          value: k8s
-        - name: MYSQL_PASSWORD
-          value: 123456
         ports:
-        - containerPort:  3306
+        - containerPort: 3306
           name:  mysql
         volumeMounts:
         - name: mysql-data
